Feat: develop searching address feature with webView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <activity android:name=".changedPasswordActivity"
             android:theme="@style/Theme.Hitechmart.Onboarding"
             />
+        <activity android:name=".AddressActivity"
+            android:theme="@style/Theme.Hitechmart.Onboarding"
+            />
     </application>
 
 </manifest>
