working with franments on home screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 //bindingni yoqish uchun
     buildFeatures{
         viewBinding true
+        buildConfig true
     }
 
     compileOptions {
@@ -41,6 +42,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.google.code.gson:gson:2.6.2'
