--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hitechmart"
+        android:theme="@style/AppTheme"
         tools:targetApi="31"
         android:networkSecurityConfig="@xml/network_security_config"
         >
@@ -29,26 +29,26 @@
 
         <activity android:name=".MainActivity"/>
         <activity android:name=".LoginActivity"
-            android:theme="@style/Theme.Hitechmart.Onboarding"
+            android:theme="@style/AppTheme"
             />
         <activity android:name=".RegistrationActivity"
-            android:theme="@style/Theme.Hitechmart.Onboarding"
+            android:theme="@style/AppTheme"
             />
         <activity android:name=".ResetPasswordActivity"
-            android:theme="@style/Theme.Hitechmart.Onboarding"
+            android:theme="@style/AppTheme"
             />
 
         <activity android:name=".ConfirmEmailActivity"
-            android:theme="@style/Theme.Hitechmart.Onboarding"
+            android:theme="@style/AppTheme"
             />
         <activity android:name=".NewPasswordActivity"
-            android:theme="@style/Theme.Hitechmart.Onboarding"
+            android:theme="@style/AppTheme"
             />
         <activity android:name=".changedPasswordActivity"
-            android:theme="@style/Theme.Hitechmart.Onboarding"
+            android:theme="@style/AppTheme"
             />
         <activity android:name=".AddressActivity"
-            android:theme="@style/Theme.Hitechmart.Onboarding"
+            android:theme="@style/AppTheme"
             />
     </application>
 
