feat: develop ProductlistActivity and getting products by CLASSIFICATION CATEGORY SUBPRODUCT from Api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         </activity>
 
         <activity android:name=".MainActivity"/>
+        <activity android:name=".activity.ProductListActivity"
+            android:theme="@style/AppTheme.Onboarding"
+            />
         <activity android:name=".LoginActivity"
             android:theme="@style/AppTheme"
             />
