--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,27 +31,31 @@
         <activity android:name=".activity.ProductListActivity"
             android:theme="@style/AppTheme.Onboarding"
             />
+
+        <activity android:name=".activity.ProductDetailsActivity"
+            android:theme="@style/AppTheme.Onboarding"
+            />
         <activity android:name=".LoginActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Onboarding"
             />
         <activity android:name=".RegistrationActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Onboarding"
             />
         <activity android:name=".ResetPasswordActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Onboarding"
             />
 
         <activity android:name=".ConfirmEmailActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Onboarding"
             />
         <activity android:name=".NewPasswordActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Onboarding"
             />
         <activity android:name=".changedPasswordActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Onboarding"
             />
         <activity android:name=".AddressActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Onboarding"
             />
     </application>
 
